# FAR-AWAY_EXAMINATION

./: .dockerignore  FAR_AWAY_P2_BACKEND.md  FRONTEND_GUIDE.md  README.md  TEAM_GUIDE.md  docker-compose.yml  dummy_questions.csv  replace.js
apps/ai-svc/: Dockerfile  pyproject.toml
apps/ai-svc/app/: config.py  main.py  schemas.py  security.py
apps/ai-svc/app/routers/: adaptive.py  embeddings.py  generation.py  grading.py
apps/ai-svc/app/services/: generator.py  grader.py  irt.py  llm.py
apps/core-api/: Dockerfile  package-lock.json  package.json  prisma.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/core-api/prisma/: schema.prisma  seed.ts
apps/core-api/src/: app.module.ts  main.ts
apps/core-api/src/ai/: ai.client.ts  ai.module.ts
apps/core-api/src/config/: configuration.ts
apps/core-api/src/prisma/: prisma.service.ts
apps/core-api/src/queue/: queue.module.ts
apps/core-api/src/redis/: lock.service.ts  redis.module.ts  redis.service.ts
apps/exami/: README.md  package-lock.json  package.json
apps/exami/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/exami/app/(admin)/: layout.tsx
apps/exami/app/(auth)/: layout.tsx
apps/exami/app/(exam)/: layout.tsx
apps/exami/app/(public)/: layout.tsx
apps/exami/components/charts/: score-distribution.tsx
apps/exami/components/exam/: adaptive-runner.tsx  exam-timer.tsx  paper-runner.tsx  question-renderer.tsx
apps/exami/components/examiner/: grading-panel.tsx  questions-panel.tsx  results-panel.tsx  roster-panel.tsx
apps/exami/lib/: types.ts  utils.ts
apps/exami/lib/api/: auth.ts  (+9 more)
(+106 files in other folders)
