[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-svc"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "anthropic>=0.28.0",
  "pydantic>=2.7.0",
  "numpy>=1.26.0",
  "scipy>=1.13.0",
]
